--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 h1 {
-    color: blue;
-    font-family: 'Times New Roman', Times, serif;
+    color: rgb(89, 0, 255);
+    font-family: "Trebuchet MS", Helvetica, sans-serif
 }
