--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ h1 {
     color: rgb(89, 0, 255);
     font-family: "Trebuchet MS", Helvetica, sans-serif
 }
+p {
+    color:darkblue;
+    font-size:24px;
+    text-align:center;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
+}
